--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body><noscript><strong>We're sorry but router-1 doesn't work properly without JavaScript enabled. Please enable it to
             continue.</strong></noscript>
     <div id="app"></div>
-    <script src="/vue1js/js/chunk-vendors.caf066fd.js"></script>
-    <script src="/vue1js/js/app.8bf21760.js"></script>
+    <script src="./vue1js/js/chunk-vendors.caf066fd.js"></script>
+    <script src="./vue1js/js/app.8bf21760.js"></script>
 </body>
 
 </html>
